Adding something to the gh-pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 class="text-center">Welcome to Legio Mariae's World</h1>
+                    <div class="top-nav-menu">
+                        <h1 class="text-center">Welcome to Legio Mariae's World</h1>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -22,7 +24,10 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <div id="list-sites" class="list-sites"></div>
+                    <div id="list-sites" class="list-sites">
+                        <h2>List of sites</h2>
+                        
+                    </div>
                 </div>
             </div>
         </div>
