Adicionando recurso de scroll down

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="top-nav-menu">
-                        <h1 class="text-center">Welcome to Legio Mariae's World</h1>
-                    </div>
+                    <header>
+                        <div class="top-nav-menu">
+                            <h1 class="text-left">Welcome to Legio Mariae's World</h1>
+                        </div>
+                    </header>
                 </div>
             </div>
             <div class="row">
@@ -26,6 +28,7 @@
                 <div class="col-12">
                     <div id="list-sites-wrapper" class="list-sites">
                         <h2>List of sites</h2>
+                        <hr/>
                         <div id="country-selected" style="display: none;">
                             <table class="table table-bordered" >
                                 <thead>
@@ -48,7 +51,7 @@
         </div>
 
         <!-- Scripts -->
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
         <script src="./js/jvector/jquery-jvectormap-2.0.5.min.js"></script>
