Adicionando extensões da font da Legião e ajustando elementos do layout

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <title>Legio Mariae's World</title>
+        <link rel="stylesheet" href="./css/fonts/legio_font.css.css"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous" />
         <link rel="stylesheet" href="./css/jquery-jvectormap-2.0.5.css"/>
         <link rel="stylesheet" href="./css/main.css"/>
+        
     </head>
     <body>
         <header>
