Adding elements to compond the HTML.ç

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <title>Legio Mariae's World</title>
-        <link rel="stylesheet" href="./css/fonts/legio_font.css.css"/>
+        <link rel="stylesheet" href="./css/fonts/legio_font.css"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" crossorigin="anonymous" />
         <link rel="stylesheet" href="./css/jquery-jvectormap-2.0.5.css"/>
         <link rel="stylesheet" href="./css/main.css"/>
@@ -14,7 +14,10 @@
         <header>
             <div class="top-nav-menu">
                 <div class="container">
-                    <h1 class="text-left">Legio Mariae</h1>
+                    <img src="images/vexillium_Branco.svg" class="top-nav-menu--logo"/>
+                    <h1 class="text-left" class="top-nav-menu--title">
+                        Legio Mariae
+                    </h1>
                 </div>
             </div>
         </header>
@@ -33,16 +36,6 @@
             </section>
             <section class="section-content">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-12">
-                            
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12">
-                            
-                        </div>
-                    </div>
                     <div class="row">
                         <div class="col-12">
                             <div id="list-sites-wrapper" class="list-sites">
