Atualização dos arquivos de css index e main

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <img src="images/vexillium_Branco.svg" class="footer-central--logo"/>
             </div>
             <div class="text-center date-text-footer">
-                <p>© <span id="footer-year"></span> Legion of Mary </p>
+                <p>© <span id="footer-year"></span> Legion of Mary | Developed by <a href="https://legiomariae.com.br/">Regia Aparecida de Brasília-DF</a>, Brazil, IT Analyst <a href="https://www.instagram.com/tiagosvo/">@tiagosvo</a></p>
             </div>
         </footer>        
 
